US15149 - Fixes nav overlap

--- a/app/shared/components/navbar/navbar.scss
+++ b/app/shared/components/navbar/navbar.scss
@@ -190,15 +190,13 @@ navbar {
 
   .top-level-menu {
     display: inline-block;
-    margin-left: -5px;
-    margin-right: -5px;
     padding: 5px 18px 0;
     position: relative;
 
     a {
       color: $gray-1;
       font-size: 0.938em;
-      font-weight: $light;
+      font-weight: $regular;
 
       &:hover {
         color: $dark-blue;
@@ -210,9 +208,6 @@ navbar {
       &:hover {
         background: $dark-blue-2;
         box-shadow: 0 2px 1px #000000;
-        padding: 5px 26px 0 25px;
-        margin-left: -15px;
-        margin-right: -15px;
 
         .inner {
 
